# 3dprintposters

./: .env.example  .firebaserc  .firebaserc.example  .gitignore  3DPrintPosters_ Product Requirements Document.md  AGENTS.md  AI_3D_MODEL_GENERATION_RESEARCH.md  AI_DEVELOPER_NOTES.md  BUSINESS PLAN.md  BUSINESS.md  CHANGELOG.md  CHECKLIST.md  DECISIONS.md  PROJECT_STATE.md  README.md  firebase.json  package-lock.json  package.json  railway.toml
docs/: DESIGN.md  (+11 more)
services/print-file-generator/: Dockerfile  README.md  pyproject.toml
services/print-file-generator/app/: color_packages.py  depth.py  depth_debug.py  depth_filters.py  depth_inference.py  depth_providers.py  depth_types.py  figurine_assembly.py  figurine_name_base.py  generation.py  geometry_input.py  heightmap_ops.py  image_pipeline.py  main.py  metadata.py  models.py  packages.py  portrait_regions.py  portrait_relief.py  preview.py  printability.py  provider_policy.py  quality_gates.py  relief.py  segmentation_masks.py  storage.py  surface_intent.py
services/print-file-generator/app/experimental/: __init__.py  triposr_sidecar.py
services/print-file-generator/print_file_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/print-file-generator/scripts/: analyze_figurine_candidate.py  compose_named_base.py  generate_canonical_masks.py  normalize_meshy_artifact.py  promote_square_base_asset.py  run_heightmap_experiment.py  run_quality_gates.py
services/print-file-generator/tests/: README.md  support.py  test_contract.py  test_depth.py  test_providers.py  test_quality_gates.py  test_relief.py
(+229 files in other folders)
