[project]
name = "print-file-generator"
version = "0.1.0"
description = "Print-ready artifact bundle generation service for 3D Print Posters."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "google-cloud-storage>=2.19",
  "numpy>=2.2",
  "pillow>=11.0",
  "pydantic>=2.10",
  "uvicorn[standard]>=0.34"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8"
]
experiments = [
  "torch>=2.4",
  "transformers>=4.46"
]

[tool.ruff]
line-length = 100
target-version = "py312"
